--- a/res/values/appupdate_strings.xml
+++ b/res/values/appupdate_strings.xml
@@ -1,18 +1,17 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="update_latest">Now you have the latest update</string>
-    <string name="update_title">New update</string>
-    <string name="update_message">The software need to be updated！</string>
-    <string name="update_update_btn">Update</string>
-    <string name="updating">Updating</string>
-    <string name="update_cancel">Cancel</string>
-    <string name="update_bg">Update in background</string>
-    <string name="download_complete">Download complete</string>
-    <string name="download_complete_title">Download complete</string>
-    <string name="download_complete_pos_btn">Download again</string>
-    <string name="download_complete_neu_btn">Install manually</string>
+    <string name="update_latest">已安裝最新版本的應用程式</string>
+    <string name="update_title">應用程式更新</string>
+    <string name="update_message">檢測到新版本, 請先更新應用程式</string>
+    <string name="update_update_btn">更新</string>
+    <string name="updating">正在更新</string>
+    <string name="update_cancel">取消</string>
+    <string name="update_bg">背景更新</string>
+    <string name="download_complete_title">下載完成</string>
+    <string name="download_complete_pos_btn">重新下載</string>
+    <string name="download_complete_neu_btn">手動安裝</string>
 
-    <string name="update_error_title">Error</string>
-    <string name="update_error_message">The current network is unavailable , please check your network settings.</string>
-    <string name="update_error_yes_btn">OK</string>
+    <string name="update_error_title">請稍後再嘗試</string>
+    <string name="update_error_message">無法連上伺服器，請稍後再嘗試</string>
+    <string name="update_error_yes_btn">確定</string>
 </resources>
