--- a/res/values-zh/appupdate_strings.xml
+++ b/res/values-zh/appupdate_strings.xml
@@ -7,6 +7,7 @@
     <string name="updating">正在更新</string>
     <string name="update_cancel">取消</string>
     <string name="update_bg">背景更新</string>
+    <string name="download_complete">下載完成</string>
     <string name="download_complete_title">下載完成</string>
     <string name="download_complete_pos_btn">重新下載</string>
     <string name="download_complete_neu_btn">手動安裝</string>
