--- a/res/values/appupdate_strings.xml
+++ b/res/values/appupdate_strings.xml
@@ -4,13 +4,13 @@
     <string name="update_title">應用程式更新</string>
     <string name="update_message">檢測到新版本, 請先更新應用程式</string>
     <string name="update_update_btn">更新</string>
-    <string name="updating">正在更新</string>
+    <string name="updating">正在下載更新</string>
     <string name="update_cancel">取消</string>
-    <string name="update_bg">背景更新</string>
+    <string name="update_bg">背景下載</string>
     <string name="download_complete">下載完成</string>
     <string name="download_complete_title">下載完成</string>
     <string name="download_complete_pos_btn">重新下載</string>
-    <string name="download_complete_neu_btn">手動安裝</string>
+    <string name="download_complete_neu_btn">安裝</string>
 
     <string name="update_error_title">請稍後再嘗試</string>
     <string name="update_error_message">無法連上伺服器，請稍後再嘗試</string>
