--- a/res/values-en/appupdate_strings.xml
+++ b/res/values-en/appupdate_strings.xml
@@ -7,8 +7,8 @@
     <string name="updating">Downloading Update</string>
     <string name="update_cancel">Cancel</string>
     <string name="update_bg">Background Download</string>
-    <string name="download_complete">Download completed</string>
-    <string name="download_complete_title">Download completed</string>
+    <string name="download_complete">Download Completed</string>
+    <string name="download_complete_title">Download Completed</string>
     <string name="download_complete_pos_btn">Re-Download</string>
     <string name="download_complete_neu_btn">Install</string>
 
